--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     ],
     "require": {
         "craftcms/cms": "^3.3",
-        "sly/notification-pusher": "^2.3"
+        "edamov/pushok": "^0.7.0"
     },
     "autoload": {
         "psr-4": {
