Removed unused dependency

--- a/composer.json
+++ b/composer.json
@@ -27,8 +27,7 @@
     ],
     "require": {
         "craftcms/cms": "^3.3",
-        "edamov/pushok": "^0.7.0",
-        "2amigos/yii2-taggable-behavior": "dev-master"
+        "edamov/pushok": "^0.7.0"
     },
     "autoload": {
         "psr-4": {
