--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "require": {
         "craftcms/cms": "^3.3",
         "edamov/pushok": "^0.7.0",
-        "levinriegner/craft-jason": "dev-master"
+        "levinriegner/craft-jason": "dev-master",
+        "nicmart/string-template": "^0.1.1"
     },
     "autoload": {
         "psr-4": {
