--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "levinriegner/craft-push-notifications",
     "description": "Enable sending push notifications from Craft",
     "type": "craft-plugin",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "keywords": [
         "craft",
         "cms",
@@ -28,8 +28,9 @@
     "require": {
         "craftcms/cms": "^3.3",
         "edamov/pushok": "^0.7.0",
-        "levinriegner/craft-jason": "dev-master",
-        "nicmart/string-template": "^0.1.1"
+        "levinriegner/craft-jason": "1.0.3",
+        "nicmart/string-template": "^0.1.1",
+        "sly/notification-pusher": "^2.3"
     },
     "autoload": {
         "psr-4": {
