--- a/composer.json
+++ b/composer.json
@@ -56,5 +56,11 @@
         "no-api": true,
         "url": "git@github.com:levin-riegner/craft-jason.git"
       }
-    ]
+    ],
+    "config": {
+        "allow-plugins": {
+            "craftcms/plugin-installer": true,
+            "yiisoft/yii2-composer": true
+        }
+    }
 }
